# libmotorcpp

./: .clang-format  CMakeLists.txt  conanfile.py  readme.md
src/: CMakeLists.txt  motor.cpp  motor.hpp  transformations.hpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp  tests.cpp
